--- a/Web/IReporter.Web/Views/Shared/_LoginPartial.cshtml
+++ b/Web/IReporter.Web/Views/Shared/_LoginPartial.cshtml
@@ -7,7 +7,7 @@
 
     <ul class="nav navbar-nav navbar-right">
         <li>
-            @Html.ActionLink("Hello " + User.Identity.GetUserName() + "!", "Index", "Manage", routeValues: new { area = string.Empty }, htmlAttributes: new { title = "Manage" })
+            <span class="glyphicon glyphicon-user special-link"></span>@Html.ActionLink(" " + User.Identity.GetUserName(), "Index", "Manage", routeValues: new { area = string.Empty }, htmlAttributes: new { title = "Manage"})
         </li>
         <li><a href="javascript:document.getElementById('logoutForm').submit()">Log off</a></li>
     </ul>
