--- a/Web/IReporter.Web/Views/ArticleTabStrip/_MostLikedArticles.cshtml
+++ b/Web/IReporter.Web/Views/ArticleTabStrip/_MostLikedArticles.cshtml
@@ -9,6 +9,6 @@
 {
     <div><a href="/articles/@article.Id-@pattern.Replace(@article.Title, "-")"><img src='../../Content/Images/@article.PrimaryImageUrl' width=200 height=150></a></div>
     <h5>@article.Title</h5>
-    <small>by @article.Author.FirstName @article.Author.LastName <br />Rating: @article.Ratings</small>
+    <small>by @article.Author.FirstName @article.Author.LastName <br />Rating: @article.Rating</small>
     <hr />
 }
