--- a/Web/IReporter.Web/Views/HomeTabStrip/_MostLikedArticles.cshtml
+++ b/Web/IReporter.Web/Views/HomeTabStrip/_MostLikedArticles.cshtml
@@ -1,9 +1,11 @@
-﻿@model IEnumerable<IReporter.Web.ViewModels.Home.ArticleViewModel>
+﻿@using System.Text.RegularExpressions
+@model IEnumerable<IReporter.Web.ViewModels.Home.ArticleViewModel>
 @{
     int index = 1;
+    var pattern = new Regex("[^a-zA-Z0-9]");
 }
 
 @foreach (var article in Model)
 {
-    <h4>@(index++). @article.Title <small>by @article.Author.FirstName @article.Author.LastName Rating: @article.Ratings</small></h4>
+    <h4>@(index++). <a href="/articles/@article.Id-@pattern.Replace(@article.Title, "-")">@article.Title</a> <small>by @article.Author.FirstName @article.Author.LastName Rating: @article.Rating</small></h4>
 }
