--- a/Web/IReporter.Web/Views/ByCategory/Music.cshtml
+++ b/Web/IReporter.Web/Views/ByCategory/Music.cshtml
@@ -12,12 +12,12 @@
         .Name("MusicArticlesGrid")
         .Columns(cols =>
         {
-            cols.Bound(c => c.PrimaryImageUrl).ClientTemplate(@"<a href='/articles/#=Id#-#=Title.replace(/[^a-zA-Z0-9]/g,'-')#'><img src='../../Content/Images/#:PrimaryImageUrl#' width=200 height=150></a>").Sortable(false).Width(220);
-            cols.Bound(c => c.Content).Title("News").ClientTemplate(
+            cols.Bound(c => c.PrimaryImageUrl).Title("<h4><span class=\"fa fa-picture-o\"></span></h4>").ClientTemplate(@"<a href='/articles/#=Id#-#=Title.replace(/[^a-zA-Z0-9]/g,'-')#'><img src='../../Content/Images/#:PrimaryImageUrl#' width=200 height=150></a>").Sortable(false).Width(220);
+            cols.Bound(c => c.Content).Title("<h4><span class=\"fa fa-newspaper-o\"></span></h4>").ClientTemplate(
                 @"<h3><a href='/articles/#=Id#-#=Title.replace(/[^a-zA-Z0-9]/g,'-')#'>#:Title#</a></h3>
                     <small>#=kendo.toString(CreatedOn, 'dd/M/yyyy H:mm')# by #=Author.FirstName# #=Author.LastName#</small>
                     <p>#=Excerpt# <a href='/articles/#=Id#-#=Title.replace(/[^a-zA-Z0-9]/g,'-')#'><span class='glyphicon glyphicon-plus-sign'></span> read more</a></p>");
-            cols.Bound(c => c.NumberOfViews).ClientTemplate(@"<span class='glyphicon glyphicon-eye-open'></span><h4>#= NumberOfViews#</h4>").Title("Views").Width(150);
+            cols.Bound(c => c.NumberOfViews).Title("<h4><span class=\"fa fa-list\"></span></h4>").ClientTemplate(@"<span class='glyphicon glyphicon-eye-open'></span><h4>#= NumberOfViews#</h4>").Title("Views").Width(150);
         })
         .Pageable()
         .DataSource(d => d.Ajax()
